--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168647005-1"></script>
@@ -8,18 +11,11 @@
 
         gtag('config', 'UA-168647005-1');
     </script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="underrated.css">
-    <link href="javascript:void(0);" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Herr+Von+Muellerhoff' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="javascript:void(0);" rel="stylesheet">
 
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CelebBattles</title>
+    <link rel="icon" type="image/png" href="tournaments/favicon.png" />
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -28,10 +24,9 @@
     <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-    <title>CelebBattles Hottest Underrated Celeb</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <!-- Template Main CSS File -->
+    <link href="underrated.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -52,9 +47,7 @@
     <header id="header" class="fixed-top d-flex align-items-center">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
-                <h1 class="text-light"><a href="../index.html"><span>CelebBattles</span></a></h1>
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="../assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                <h1 class="text-light"><a href="../index.html"><span>CelebBattles </span></a></h1>
             </div>
             <nav id="navbar" class="navbar">
                 <ul>
@@ -78,19 +71,17 @@
             <!-- .navbar -->
         </div>
     </header>
-
+    <!-- End Header -->
     <main id="main">
         <!-- ======= Our Team Section ======= -->
         <section class="breadcrumbs">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>Hottest Underrated Celeb</h2>
+                    <h2>Top 30 Celebs</h2>
                 </div>
             </div>
             <div id="animatedBackground"></div>
         </section>
-        <!-- End Our Team Section -->
-        <!-- ======= Team Section ======= -->
 
         <section id="bracket">
             <div class="br-container">
@@ -435,6 +426,8 @@
             </div>
         </section>
     </main>
+    <!-- End #main -->
+    <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container">
             <div class="copyright">
@@ -442,4 +435,19 @@
             </div>
         </div>
     </footer>
+    <!-- End Footer -->
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../assets/vendor/purecounter/purecounter.js"></script>
+    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <!-- Template Main JS File -->
+    <script src="../assets/js/main.js"></script>
 </body>
+
+</html>
