--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -77,7 +77,7 @@
         <section class="breadcrumbs">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>Top 30 Celebs</h2>
+                    <h2>Hottest Underrated Celeb</h2>
                 </div>
             </div>
             <div id="animatedBackground"></div>
