--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>CelebBattles</title>
-    <link rel="icon" type="image/png" href="tournaments/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
