--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>CelebBattles </span></a></h1>
+        <h1 class="text-light"><a href="https://celebbattles.github.io/"><span>CelebBattles </span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
           <li class="dropdown">
             <a href="#"><span>Tournaments</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
