--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -47,11 +47,11 @@
     <header id="header" class="fixed-top d-flex align-items-center">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
-                <h1 class="text-light"><a href="../index.html"><span>CelebBattles </span></a></h1>
+                <h1 class="text-light"><a href="https://celebbattles.github.io/"><span>CelebBattles </span></a></h1>
             </div>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="active" href="../index.html">Home</a></li>
+                    <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Tournaments</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
