--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -52,6 +52,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
+                    <li><a class="active" href="https://reddit.com/r/celebbattles">Reddit</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Tournaments</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
@@ -220,7 +221,7 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
                         </ul>
-                        <ul class="matchup">s
+                        <ul class="matchup">
                             <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
                         </ul>
