--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
+          <li><a class="active" href="https://reddit.com/r/celebbattles">Reddit</a></li>
           <li class="dropdown">
             <a href="#"><span>Tournaments</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -77,16 +78,6 @@
   </header>
   <!-- End Header -->
   <main id="main">
-    <!-- ======= Our Team Section ======= -->
-    <section class="breadcrumbs">
-      <div class="container">
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Top 30 Celebs</h2>
-        </div>
-      </div>
-    </section>
-    <!-- End Our Team Section -->
-    <!-- ======= Team Section ======= -->
     <section class="team">
       <div class="container">
         <div class="row">
