--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
     </div>
   </header>
   <main id="main">
+    <section class="breadcrumbs">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Top Celebs</h2>
+        </div>
+      </div>
+    </section>
     <section class="team">
       <div class="container">
         <div id="col-holder" class="row"></div>
